Corretto nome campo errato

--- a/lezione3/testo-esercizi/html/Pandas.html
+++ b/lezione3/testo-esercizi/html/Pandas.html
@@ -12596,7 +12596,7 @@ div#notebook {
 <li>Visualizzate le prime righe di entrambi i dataframe.</li>
 <li>Visualizzare tutte le aree (<code>area_names</code>) dello stato di <code>Bayern</code>.</li>
 <li>Trovare tutti i partiti (<code>party</code>) che hanno ottenuto piu' di 30.000 voti in almeno 1 area.</li>
-<li>Per ogni area calcolare la percentuale di voti totali (<code>registered.voters</code>) rispetto agli elettori registrati (registered voters).</li>
+<li>Per ogni area calcolare la percentuale di voti totali (<code>total_votes</code>) rispetto agli elettori registrati (<code>registered.voters</code>).</li>
 <li>Per ogni stato (<code>state</code>) calcolare il numero totale di elettori registrati.</li>
 <li>Calcolare quanti elettori registrati ci sono negli stati di Bayern e Saarland.</li>
 <li>Per ogni partito (<code>party</code>) ed ogni stato calcolare l'area nella quale il partito ha ottenuto piu' voti.</li>
